--- a/xtream-posts/src/components/Post/index.module.css
+++ b/xtream-posts/src/components/Post/index.module.css
@@ -7,6 +7,7 @@
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.6);
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .post-card h1 {
@@ -15,4 +16,52 @@
 
 .post-card h2 {
   font-size: 2rem;
+}
+
+.btns-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  align-self: center;
+}
+.edit-btn {
+  padding: 1rem 1rem;
+  margin-bottom: 0.5rem;
+  border-radius: 15px;
+  border: none;
+  background: rgb(37, 197, 255);
+  color: #f2f2f2;
+  cursor: pointer;
+}
+
+.delete-btn {
+  padding: 1rem 1rem;
+  border-radius: 15px;
+  border: none;
+  background: rgb(255, 77, 77);
+  color: #f2f2f2;
+  cursor: pointer;
+}
+
+.update-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.update-form input {
+  height: 3rem;
+  margin-bottom: 0.5rem;
+  border-radius: 15px;
+  border: none;
+  box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.6);
+}
+
+.update-form button {
+  padding: 1rem 1rem;
+  border-radius: 15px;
+  border: none;
+  background: rgb(28, 156, 255);
+  color: #f2f2f2;
+  cursor: pointer;
+  margin-bottom: 0.5rem;
 }
