style: media queries for <UpdatePost />

--- a/xtream-posts/src/components/Post/index.module.css
+++ b/xtream-posts/src/components/Post/index.module.css
@@ -65,3 +65,9 @@
   cursor: pointer;
   margin-bottom: 0.5rem;
 }
+
+@media screen and (max-width: 1000px) {
+  .btns-wrapper {
+    width: 75%;
+  }
+}
