--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -51,7 +51,7 @@ nav ul {
   }
 
   a {
-    margin: 10px 0;
+    // margin: 10px 0;
     text-align: center;
     color: #fff;
     font-size: index.$li;
@@ -117,9 +117,5 @@ nav ul {
     right: 55px;
     transform: translate(50%, -50%);
     padding: 0.1rem;
-  }
-
-  .mobile-menu-icon:hover {
-    background-color: none !important;
   }
 }
