--- a/src/pages/favourite/Favourite.module.scss
+++ b/src/pages/favourite/Favourite.module.scss
@@ -1,16 +1,42 @@
 @use '../../index';
 
 .container {
-  max-width: 1024;
+  max-width: 1024px;
   margin: 4rem auto;
 
-  h1 {
+  .not_found {
     text-align: center;
-    padding-top: 4rem;
-    margin-bottom: 4rem;
-    text-transform: uppercase;
-    font-family: index.$font-h1;
-    font-size: index.$h1;
+    margin-top: 5rem;
+    font-family: index.$font-h2;
+    font-size: index.$h2;
+  }
+
+  .card {
+    max-width: 500px;
+    background-color: index.$white-color;
+    padding: 1rem;
+    margin: 3rem auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h4 {
+      text-align: center;
+      margin: 1rem 0;
+      font-family: index.$font-h4;
+      font-size: index.$h4;
+    }
+    p {
+      text-align: center;
+      margin: 1rem 0;
+      font-family: index.$font-p;
+      font-size: index.$p;
+    }
+
+    @media screen and (max-width: 500px) {
+      max-width: 80%;
+    }
   }
 
   .backhome {
@@ -19,9 +45,6 @@
     padding-top: 1rem;
     padding-left: 3rem;
 
-    svg {
-      margin-right: 10px;
-    }
     a {
       color: index.$primary-color;
       text-decoration: underline;
@@ -43,4 +66,23 @@
   margin-top: 6rem;
   font-size: index.$h4;
   font-family: index.$font-h4;
+}
+
+.btn {
+  cursor: pointer;
+  padding: 1rem 1.5rem;
+  margin-top: 2rem;
+  background-color: index.$primary-color;
+  color: index.$white-color;
+  font-weight: bold;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  transition: all 0.5s ease;
+}
+
+.btn:hover {
+  scale: 1.1;
+  background-color: index.$primary-color;
+  color: index.$white-color;
 }
