add -- home component and migrate fetch functionality from app to home

--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -19,6 +19,12 @@
     .nav-link {
       font-size: 1.4rem;
       padding: 1.4rem;
+
+      &:link,
+      &:visited {
+        text-decoration: none;
+        color: #555;
+      }
     }
   }
 }
