--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,13 @@
 // Import all of Bootstrap's CSS
 @import "bootstrap/scss/bootstrap";
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn-orange {
+  background-color: orangered;
+  border-color: orangered;
+  color: white;
+}
