feat: add fontAwersome cdn, add searchedTerm into store and update global style

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,10 @@ a {
   cursor: pointer;
 }
 
+.fa-arrow-left-long {
+  cursor: pointer;
+}
+
 .btn-orange {
   background-color: rgb(255, 69, 0);
   border-color: orangered;
