--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -5,22 +5,13 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --light-green: #f3fafa;
 }
 
 body {
   font-family: 'Roboto', sans-serif;
   color: rgb(var(--foreground-rgb));
+  background-color: var(--light-green);
 }
 
 .text-balance {
