added a modal to display individual recipes in detail

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,14 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --light-green: #f3fafa;
-}
-
 body {
   font-family: 'Roboto', sans-serif;
   color: rgb(var(--foreground-rgb));
-  background-color: var(--light-green);
+  background-color: #f3fafa;
 }
 
 .text-balance {
