--- a/frontEnd/src/components/recipeCard/recipeCard.css
+++ b/frontEnd/src/components/recipeCard/recipeCard.css
@@ -8,14 +8,36 @@ button {
     border-radius: 40px;
     border-color: #717171;
     padding: .5rem 1.6rem .5rem 1.6rem;
+
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+
+
+
 }
 
+button:hover {
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+}
 
+.card:hover {
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
+}
 
 .redButton {
     background-color: #f42f26;
     border-width: 0;
     color: #ffffff;
+}
+
+.redButton:hover {
+    background-color: #dc2a22;
+    -webkit-transform: scale(1.08);
+    transform: scale(1.08);
 }
 
 .card {
@@ -30,6 +52,10 @@ button {
     overflow: hidden;
     border-radius: 20px;
     box-shadow: 0px 0px 18px #d0d0d0;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform 0.3s ease-in-out;
 }
 
 .cardLeft {
