--- a/frontEnd/src/components/recipeList/RecipeList.css
+++ b/frontEnd/src/components/recipeList/RecipeList.css
@@ -2,3 +2,13 @@
     width: 50%;
     margin: 2rem auto 2rem auto;
 }
+
+.userMessage {
+
+
+    margin: auto;
+    font-size: 2rem;
+    color: #f42f26;
+    text-align: center;
+
+}
