--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -1,8 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
-
 body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 1.1rem;
   font-family: Roboto, Helvetica, sans-serif;
   color: #040404;
+}
+
+
+
+
+button {
+  cursor: pointer;
+  font-size: 1rem;
+  border-radius: 40px;
+  border-color: #717171;
+  padding: .5rem 1.6rem .5rem 1.6rem;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+button:hover {
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
+.redButton {
+  background-color: #f42f26;
+  border-width: 0;
+  color: #ffffff;
+}
+
+.redButton:hover {
+  background-color: #dc2a22;
+  -webkit-transform: scale(1.08);
+  transform: scale(1.08);
 }
