--- a/frontEnd/src/components/navbar/navbar.css
+++ b/frontEnd/src/components/navbar/navbar.css
@@ -1,12 +1,15 @@
 .navBar {
+    position: fixed;
+    top: 0;
+    z-index: 5;
     width: 100%;
+    height: 4rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     background: #ffffff;
     box-shadow: 0px 0px 18px #d0d0d0;
     align-items: center;
-    height: 4rem;
 }
 
 .leftElems {
