--- a/frontEnd/src/components/recipeCard/recipeCard.css
+++ b/frontEnd/src/components/recipeCard/recipeCard.css
@@ -7,10 +7,11 @@
 .card {
     display: flex;
     flex-direction: row;
-    align-items: start;
+    align-items: center;
+    justify-content: center;
     margin: 0 auto 1.5rem auto;
     top: 5rem;
-    height: 20rem;
+    height: 16rem;
     width: 100%;
     background: #ffffff;
     overflow: hidden;
@@ -22,12 +23,21 @@
     transition-property: transform 0.3s ease-in-out;
 }
 
+.cardContent {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
 .cardLeft {
     display: flex;
     width: 33%;
     height: 80%;
-    margin-top: 2rem;
-    margin-left: 1rem;
+    margin-top: 1rem;
+    margin-left: -3.8rem;
     text-align: center;
     justify-content: flex-start;
     text-align: center;
@@ -35,8 +45,11 @@
 }
 
 .dishImg {
-    width: 16rem;
-    height: 16rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 12rem;
+    height: 12rem;
     border-radius: 20px;
     overflow: hidden;
     object-fit: cover;
@@ -44,22 +57,23 @@
 }
 
 .cardCenter {
+    margin-top: -1.7rem;
     width: 33%;
     height: 80%;
-    margin-left: 1.2rem;
     display: flex;
     flex-direction: column;
     text-align: left;
-
+    margin-left: -2.8rem;
 }
 
 .dishOverview {
-    margin-top: .5rem;
-    margin-bottom: 3rem;
+    margin-bottom: .5rem;
     height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin-bottom: 1rem;
+
 }
 
 .dishOverview>h2 {
@@ -73,13 +87,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     margin-top: -.5rem;
-    margin-bottom: 1rem;
 }
 
 
-.dishCategory {
-    margin-bottom: -.7rem;
-}
 
 
 .dishType,
@@ -103,6 +113,7 @@
 
 .tag {
     margin-right: .5rem;
+    margin-top: -.5rem;
     background-color: #ffffff;
     border-width: 2px;
 }
@@ -119,11 +130,11 @@
 }
 
 .reviewsBlock {
-    margin-top: .5rem;
+    margin-top: -.5rem;
     display: flex;
     flex-direction: row;
     justify-content: end;
-
+    margin-bottom: 2rem;
 }
 
 .dishRating {
@@ -142,10 +153,6 @@
 
 .reviewsVote {
     margin: 1.5rem 0 0 1rem;
-}
-
-.actionBlock {
-    margin-top: 6rem;
 }
 
 
